--- a/setup.cfg
+++ b/setup.cfg
@@ -8,7 +8,7 @@ classifiers=
     #   3 - Alpha
     #   4 - Beta
     #   5 - Production/Stable
-    Development Status :: 2 - Pre-Alpha
+    Development Status :: 3 - Alpha
 
     # Indicate who your project is intended for
     Environment :: Web Environment
