--- a/setup.cfg
+++ b/setup.cfg
@@ -36,7 +36,7 @@ long_description_content_type = text/markdown
 url = https://github.com/s-ball/remo_serv
 
 [options]
-packages= remo_serv
+packages= remo_serv, tools
 python_requires = >=3.6
 setup_requires = setuptools>=42
                  setuptools_scm>=3.4
